--- a/manifest.json
+++ b/manifest.json
@@ -1,34 +1,30 @@
 {
-    "name": "Example app",
-    "id": "example",
+    "name": "TLDraw",
+    "id": "tldraw",
     "packaging_format": 1,
     "description": {
-        "en": "Explain in *a few (10~15) words* the purpose of the app or what it actually does (it is meant to give a rough idea to users browsing a catalog of 100+ apps)",
-        "fr": "Expliquez en *quelques* (10~15) mots l'utilité de l'app ou ce qu'elle fait (l'objectif est de donner une idée grossière pour des utilisateurs qui naviguent dans un catalogue de 100+ apps)"
+        "en": "A tiny little drawing app"
     },
-    "version": "1.0~ynh1",
-    "url": "https://example.com",
+    "version": "1.24.5~ynh1",
+    "url": "https://tldraw.com",
     "upstream": {
-        "license": "free",
-        "website": "https://example.com",
-        "demo": "https://demo.example.com",
-        "admindoc": "https://yunohost.org/packaging_apps",
-        "userdoc": "https://yunohost.org/apps",
-        "code": "https://some.forge.com/example/example"
+        "license": "mit",
+        "website": "https://tldraw.com",
+        "demo": "https://tldraw.com",
+        "admindoc": "https://github.com/tldraw/tldraw/blob/main/guides/documentation.md",
+        "userdoc": "https://github.com/tldraw/tldraw/blob/main/guides/documentation.md",
+        "code": "https://github.com/tldraw/tldraw"
     },
-    "license": "free",
+    "license": "mit",
     "maintainer": {
-        "name": "John doe",
-        "email": "john.doe@example.com"
+        "name": "Raoul de Limezy"
     },
     "requirements": {
-        "yunohost": ">= 11.0.0"
+        "yunohost": ">= 11.0.9"
     },
     "multi_instance": true,
     "services": [
-        "nginx",
-        "php7.4-fpm",
-        "mysql"
+        "nginx"
     ],
     "arguments": {
         "install": [
@@ -48,25 +44,19 @@
                 "default": true
             },
             {
-                "name": "language",
+                "name": "Liveblocks API Public key",
                 "type": "string",
-                "ask": {
-                    "en": "Choose the application language",
-                    "fr": "Choisissez la langue de l'application"
-                },
-                "choices": ["fr", "en"],
-                "default": "fr"
-            },
-            {
-                "name": "admin",
-                "type": "user"
-            },
-            {
-                "name": "password",
-                "type": "password",
                 "help": {
-                    "en": "Use the help field to add an information for the admin about this question.",
-                    "fr": "Utilisez le champ aide pour ajouter une information à l'intention de l'administrateur à propos de cette question."
+                    "en": "Multiplayer mode requires a Liveblocks API Public Key (you can get one for free at https://liveblocks.io). Don't input anything if you don't want multiplayer mode.",
+                    "fr": "Le mode d'édition instantanée requiert une clef publique d'API Liveblocks (vous pouvez en obtenir une gratuitement sur ttps://liveblocks.io). Ne mettez rien si vous ne souhaitez pas de mode d'étition instantanée"
+                }
+            },
+            {
+                "name": "Liveblocks API Secret key",
+                "type": "string",
+                "help": {
+                    "en": "Multiplayer mode requires a Liveblocks API Secret Key (you can get one for free at https://liveblocks.io). Don't input anything if you don't want multiplayer mode.",
+                    "fr": "Le mode d'édition instantanée requiert une clef secrete d'API Liveblocks (vous pouvez en obtenir une gratuitement sur ttps://liveblocks.io). Ne mettez rien si vous ne souhaitez pas de mode d'étition instantanée"
                 }
             }
         ]
