--- a/manifest.json
+++ b/manifest.json
@@ -44,19 +44,27 @@
                 "default": true
             },
             {
-                "name": "Liveblocks API Public key",
+                "name": "publickey",
                 "type": "string",
                 "help": {
                     "en": "Multiplayer mode requires a Liveblocks API Public Key (you can get one for free at https://liveblocks.io). Don't input anything if you don't want multiplayer mode.",
                     "fr": "Le mode d'édition instantanée requiert une clef publique d'API Liveblocks (vous pouvez en obtenir une gratuitement sur ttps://liveblocks.io). Ne mettez rien si vous ne souhaitez pas de mode d'étition instantanée"
+                },
+                "ask": {
+                    "en": "API Public Key",
+                    "fr": "API Public Key"
                 }
             },
             {
-                "name": "Liveblocks API Secret key",
+                "name": "secretkey",
                 "type": "string",
                 "help": {
                     "en": "Multiplayer mode requires a Liveblocks API Secret Key (you can get one for free at https://liveblocks.io). Don't input anything if you don't want multiplayer mode.",
                     "fr": "Le mode d'édition instantanée requiert une clef secrete d'API Liveblocks (vous pouvez en obtenir une gratuitement sur ttps://liveblocks.io). Ne mettez rien si vous ne souhaitez pas de mode d'étition instantanée"
+                },
+                "ask": {
+                    "en": "API Secret Key",
+                    "fr": "API Secret Key"
                 }
             }
         ]
