--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -6,8 +6,10 @@ After=network.target
 Type=simple
 User=__APP__
 Group=__APP__
-WorkingDirectory=__FINALPATH__/
-ExecStart=__FINALPATH__/script
+WorkingDirectory=__FINALPATH__/apps/www/
+Environment="NODE_ENV=production"
+Environment="__YNH_NODE_LOAD_PATH__"
+ExecStart=__YNH_NPM__ start
 StandardOutput=append:/var/log/__APP__/__APP__.log
 StandardError=inherit
 
