--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,14 @@
     "version": "1.24.5~ynh2",
     "url": "https://tldraw.com",
     "upstream": {
-        "license": "mit",
+        "license": "MIT",
         "website": "https://tldraw.com",
         "demo": "https://tldraw.com",
         "admindoc": "https://github.com/tldraw/tldraw/blob/main/guides/documentation.md",
         "userdoc": "https://github.com/tldraw/tldraw/blob/main/guides/documentation.md",
         "code": "https://github.com/tldraw/tldraw"
     },
-    "license": "mit",
+    "license": "MIT",
     "maintainer": {
         "name": "Raoul de Limezy"
     },
