--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "packaging_format": 1,
     "description": {
         "en": "A tiny little drawing app",
-        "fr": "Application de dessin"
+        "fr": "Une toute petite application de dessin"
     },
     "version": "1.24.5~ynh2",
     "url": "https://tldraw.com",
@@ -50,8 +50,8 @@
                     "fr": "Le mode d'édition instantanée requiert une clef publique d'API Liveblocks (vous pouvez en obtenir une gratuitement sur ttps://liveblocks.io). Ne mettez rien si vous ne souhaitez pas de mode d'étition instantanée."
                 },
                 "ask": {
-                    "en": "API Public Key",
-                    "fr": "Clé publique de l'API"
+                    "en": "Liveblocks API Public Key",
+                    "fr": "Clé publique de l'API Liveblocks"
                 }
             },
             {
@@ -62,8 +62,8 @@
                     "fr": "Le mode d'édition instantanée requiert une clef secrete d'API Liveblocks (vous pouvez en obtenir une gratuitement sur ttps://liveblocks.io). Ne mettez rien si vous ne souhaitez pas de mode d'étition instantanée."
                 },
                 "ask": {
-                    "en": "API Secret Key",
-                    "fr": "Clé secrète de l'API"
+                    "en": "Liveblocks API Secret Key",
+                    "fr": "Clé secrète de l'API Liveblocks"
                 }
             }
         ]
